finished for the night

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body,
 header,
 .view {
   height: 100%;
+  color: #fcfbf7;
 }
 
 @media (max-width: 740px) {
@@ -28,11 +29,39 @@ header,
   }
 }
 
+.navbar-brand {
+    color: #fcfbf7 !important;
 
+}
+
+.nav-link:hover { 
+
+    color: #fff9e0 !important; 
+}
+    
+
+.nav-link {
+    color: #fcfbf7 !important;
+    }
+
+.text { 
+    width: 600px;
+    height: 600px;
+    position: absolute;
+    left: 50%;
+    top: 60%; 
+    margin-left: -300px;
+    margin-top: -300px;
+    color: #fcfbf7;
+}
+
+.table {
+    margin-top:100px
+}
 
 h1 {
   letter-spacing: 8px;
-  color: whitesmoke;
+  color: #fcfbf7;
   vertical-align: middle;
 }
 
@@ -43,4 +72,9 @@ h5 {
 .hr-light {
   border-top: 3px solid #fff;
   width: 80px;
+}
+
+.table td {
+    border: none !important;
+    color: #fcfbf7;
 }
